--- a/build.xml
+++ b/build.xml
@@ -8,7 +8,13 @@
 
 	<target name="build">
 		<mkdir dir="bin"/>
-		<javac srcdir="src" destdir="bin"/>
+		<javac srcdir="src" destdir="bin">
+			<classpath>
+				<fileset dir="lib">
+					<include name="*.jar"/>
+				</fileset>
+			</classpath>
+		</javac>
 	</target>
 
 	<target name="clean">
