Consolidating search record and non search record queries into the Record object. Added several statements to the ignore file. 380 statements emitted, coverage area is unbounded.

--- a/conf/ignore_stmts.conf
+++ b/conf/ignore_stmts.conf
@@ -28,3 +28,9 @@ SELECT ALTCONTNUM, CONTFMT, VERSION, CONTSTYLE, DESCR, URL, COMPALG, AUXFLAGMASK
 SELECT ALTCONTNUM, SEQNUM, CONTDATA FROM PSCONTENT WHERE CONTNAME = :1 AND CONTTYPE = :2 ORDER BY ALTCONTNUM, SEQNUM
 SELECT COUNT(*) FROM PSCONTDEFNLANG WHERE CONTNAME = :1 AND CONTTYPE = :2 AND ALTCONTNUM = 1
 SELECT PTCUSTOMFORMAT FROM PSUSEROBJTYPE WHERE MENUNAME = :1 AND PNLGRPNAME = :2 AND PNLNAME = :3 AND OPRID = :4 AND FIELDTYPE = :5
+SELECT PTHDGSHOW, PTHDGROWACTBTNS, PTHDGROWACTALGN, PTHDGNAVBARBTNS, PTHDGNAVBARALGN    , PTBAREASTYLENAME, PTBAREAROWACTALGN, PTBAREAHIDEROWSEP, PTBAREASHWGRDLINES    , PTFTGSHOW, PTFTGSTYLENAME, PTFTGSHOWROWACT, PTFTGROWACTALGN, PTFTGSHOWNAVBAR    , PTFTGNAVBARALGN, PTSEPSTARTOFFSET, PTSEPOCCURSOFFSET, PTBTNSTARTOFFSET    , PTBTNOCCURSOFFSET, ALLOWMULTIROWINS, PTGRDLAYOUT, PTGRDSCROLLBAR, GRIDROWS    , PTSMRYDFLTTOTITLE, PTSMRYLBLTYPE, PTSMRYMSGSET, PTSMRYMSGNUM, PTSMRYDSPLFORMAT, PTSUMMARYATTRIBUTE  FROM PSPNLCNTRLDATA WHERE PNLNAME = :1 AND PNLFLDID= :2
+SELECT COUNT(*)  FROM PSPNLBTNDATA WHERE PNLNAME = :1 AND PNLFLDID = :2 AND PTBTNCLASSTYPE = :3
+SELECT PTBTNFIELDTYPE, PTVISIBLE, PTBTNLBLTYPE, CONTNAME, CONTNAMEOVER, CONTNAMEDISABLE ,LBLTYPE, LBLTEXT, MSGSET, MSGNUM, PTBTNLBLTYPE2, PTBTNLBLTEXT2, PTBTNMSGSET2, PTBTNMSGNUM2 FROM PSPNLBTNDATA WHERE PNLNAME = :1 AND PNLFLDID= :2 AND PTBTNCLASSTYPE = :3 
+SELECT VERSION, DESCR FROM PSMSGSETDEFN WHERE MESSAGE_SET_NBR = :1
+SELECT MESSAGE_NBR, MESSAGE_TEXT, MSG_SEVERITY,    DESCRLONG, TO_CHAR(CAST((LAST_UPDATE_DTTM) AS TIMESTAMP),'YYYY-MM-DD-HH24.MI.SS.FF') FROM PSMSGCATDEFN WHERE MESSAGE_SET_NBR = :1 ORDER BY MESSAGE_NBR
+
