433 statements emitted, coverage area unbounded.

--- a/conf/ignore_stmts.conf
+++ b/conf/ignore_stmts.conf
@@ -33,4 +33,6 @@ SELECT COUNT(*)  FROM PSPNLBTNDATA WHERE PNLNAME = :1 AND PNLFLDID = :2 AND PTBT
 SELECT PTBTNFIELDTYPE, PTVISIBLE, PTBTNLBLTYPE, CONTNAME, CONTNAMEOVER, CONTNAMEDISABLE ,LBLTYPE, LBLTEXT, MSGSET, MSGNUM, PTBTNLBLTYPE2, PTBTNLBLTEXT2, PTBTNMSGSET2, PTBTNMSGNUM2 FROM PSPNLBTNDATA WHERE PNLNAME = :1 AND PNLFLDID= :2 AND PTBTNCLASSTYPE = :3 
 SELECT VERSION, DESCR FROM PSMSGSETDEFN WHERE MESSAGE_SET_NBR = :1
 SELECT MESSAGE_NBR, MESSAGE_TEXT, MSG_SEVERITY,    DESCRLONG, TO_CHAR(CAST((LAST_UPDATE_DTTM) AS TIMESTAMP),'YYYY-MM-DD-HH24.MI.SS.FF') FROM PSMSGCATDEFN WHERE MESSAGE_SET_NBR = :1 ORDER BY MESSAGE_NBR
+SELECT INDEXID, INDEXTYPE, UNIQUEFLAG, CLUSTERFLAG, ACTIVEFLAG, CUSTKEYORDER, IDXCOMMENTS, PLATFORM_SBS, PLATFORM_DB2, PLATFORM_ORA, PLATFORM_INF, PLATFORM_DBX, PLATFORM_ALB, PLATFORM_SYB, PLATFORM_MSS, PLATFORM_DB4 FROM PSINDEXDEFN WHERE RECNAME = :1 ORDER BY RECNAME, INDEXTYPE, INDEXID
+SELECT INDEXID, KEYPOSN, FIELDNAME, ASCDESC FROM PSKEYDEFN WHERE RECNAME = :1 ORDER BY RECNAME, INDEXID, KEYPOSN
 
