Ignoring PSXLATITEM for now.

--- a/conf/ignore_stmts.conf
+++ b/conf/ignore_stmts.conf
@@ -38,3 +38,7 @@ SELECT INDEXID, KEYPOSN, FIELDNAME, ASCDESC FROM PSKEYDEFN WHERE RECNAME = :1 OR
 SELECT TO_CHAR(CAST((LASTUPDDTTM) AS TIMESTAMP),'YYYY-MM-DD-HH24.MI.SS.FF'), LASTUPDOPRID, VERSION, FORMATTYPE, DESCR, FMTOPTIONS, ITEMCOUNT, PUNCCHARSET, DISPLAYLEN FROM PSFMTDEFN WHERE FORMATFAMILY = :1
 SELECT STOREDFMTNAME, DISPFMTNAME, STOREDFORMAT, DISPLAYFORMAT FROM PSFMTITEM WHERE FORMATFAMILY = :1 ORDER BY STOREDFMTNAME, DISPFMTNAME
 SELECT COUNT(*) FROM PSFMTITEM WHERE FORMATFAMILY = :1
+SELECT VERSION FROM PSXLATDEFN WHERE FIELDNAME = :1
+SELECT COUNT(*) FROM PSXLATITEM WHERE FIELDNAME = :1
+SELECT FIELDVALUE, TO_CHAR(EFFDT,'YYYY-MM-DD'), EFF_STATUS, XLATLONGNAME, XLATSHORTNAME, TO_CHAR(CAST((LASTUPDDTTM) AS TIMESTAMP),'YYYY-MM-DD-HH24.MI.SS.FF'), LASTUPDOPRID, SYNCID, EFFDT FROM PSXLATITEM WHERE FIELDNAME = :1 ORDER BY FIELDVALUE, EFFDT DESC 
+SELECT COUNT(*) FROM PSXLATITEMLANG WHERE FIELDNAME = :1
