Don't fail on error if frontend ANTLR auto-generated dir does not exist.

--- a/build.xml
+++ b/build.xml
@@ -24,7 +24,7 @@
 	<target name="antlr">
 
 		<!-- Remove previously generated lexer and parser. -->
-		<delete>
+		<delete failonerror="false">
 			<fileset dir="${ANTLR_SRC_DIR}" includes="*.java"/>
 		</delete>
 
