--- a/ansible/ops.yml
+++ b/ansible/ops.yml
@@ -5,10 +5,17 @@
   vars:
     jdk_v_maj: 7
     jdk_v_min: 55
-    jdk_archive: jdk-{{jdk_v_maj}}u{{jdk_v_min}}-linux-x64.tar.gz
     jdk_dir: jdk1.{{jdk_v_maj}}.0_{{jdk_v_min}}
+    jdk_archive: jdk-{{jdk_v_maj}}u{{jdk_v_min}}-linux-x64.tar.gz
+    ant_v_maj: 1
+    ant_v_min: 9
+    ant_v_patch: 4
+    ant_dir: apache-ant-{{ant_v_maj}}.{{ant_v_min}}.{{ant_v_patch}}
+    ant_archive: apache-ant-{{ant_v_maj}}.{{ant_v_min}}.{{ant_v_patch}}-bin.tar.gz
     unix_user_dev: opsdev
   tasks:
+
+###################### INSTALL JAVA ##########################
 
 #  - name: update apt cache before dist-upgrading
 #    sudo: yes
@@ -18,7 +25,7 @@
     sudo: yes
     user: name={{unix_user_dev}} shell=/bin/bash state=present
 
-  - name: copy pub keys to dev user account
+  - name: copy public SSH access keys to dev user account
     sudo: yes
     authorized_key: user={{unix_user_dev}}
       key="{{lookup('file', '/home/mquinn/.ssh/xen_rsa.pub')}}"
@@ -26,11 +33,11 @@
       key="{{lookup('file', '/home/mquinn/.ssh/mquinn-aws.pub')}}"
 
   - name: ensure dir for jdk binaries exists
-    file: path=/home/deploy/jdk_binaries state=directory
+    file: path=/home/deploy/archive_files state=directory
 
   - name: upload Oracle JDK7 archive
-    copy: src=jdk_binaries/{{jdk_archive}}
-            dest=/home/deploy/jdk_binaries/{{jdk_archive}}
+    copy: src=archive_files/{{jdk_archive}}
+            dest=/home/deploy/archive_files/{{jdk_archive}}
 
   - name: ensure jvm dir exists
     sudo: yes
@@ -43,7 +50,7 @@
   # MQUINN: --no-same-owner ensures files are owned by root (not uucp)
   - name: extract Oracle JDK7 archive to jvm dir
     sudo: yes
-    command: tar xvf /home/deploy/jdk_binaries/{{jdk_archive}} 
+    command: tar xvf /home/deploy/archive_files/{{jdk_archive}} 
       -C /usr/lib/jvm --no-same-owner
 
   - name: point to extracted java binary
@@ -70,3 +77,40 @@
     command: javac -version    
     register: javac_ver
   - debug: var=javac_ver.stderr
+
+############## INSTALL ANT #################
+
+  - name: upload Apache Ant archive
+    copy: src=archive_files/{{ant_archive}}
+            dest=/home/deploy/archive_files/{{ant_archive}}
+
+  # MQUINN: --no-same-owner ensures files are owned by root (not uucp)
+  - name: extract Apache Ant archive to /opt
+    sudo: yes
+    command: tar xvf /home/deploy/archive_files/{{ant_archive}} 
+      -C /opt --no-same-owner
+
+  - name: set JAVA_HOME for UNIX user {{unix_user_dev}}
+    sudo: yes
+    lineinfile: dest=/home/{{unix_user_dev}}/.profile
+      line="export JAVA_HOME=/usr/lib/jvm/{{jdk_dir}}"
+
+  - name: set ANT_HOME for UNIX user {{unix_user_dev}}
+    sudo: yes
+    lineinfile: dest=/home/{{unix_user_dev}}/.profile
+      line="export ANT_HOME=/opt/{{ant_dir}}"
+
+  - name: add Ant to $PATH for UNIX user {{unix_user_dev}}
+    sudo: yes
+    lineinfile: dest=/home/{{unix_user_dev}}/.profile
+      line="export PATH=$PATH:$ANT_HOME/bin"
+
+############# INSTALL OPS CODEBASE ####################
+
+  - name: ensure git is installed
+    sudo: yes
+    apt: name=git state=present
+
+  - name: ensure make is installed
+    sudo: yes
+    apt: name=build-essential state=present
