--- a/ansible/roles/ops-developer/tasks/main.yml
+++ b/ansible/roles/ops-developer/tasks/main.yml
@@ -2,6 +2,10 @@
 # This role configures a UNIX user account for OPS development, then
 # ensures that the OPS codebase is present in that user's home directory.
 
+- name: update apt cache
+  sudo: yes
+  apt: update_cache=yes
+
 - name: ensure UNIX user *{{ops_unix_user}}* exists
   sudo: yes
   user: name={{ops_unix_user}} shell=/bin/bash state=present
@@ -62,6 +66,6 @@
   sudo_user: "{{ops_unix_user}}"
   git: repo={{git_remote_url}}
        accept_hostkey=yes
-       key_file=/home/{{ansible_ssh_user}}/.ssh/{{github_key_file}}
+       key_file=/home/{{ops_unix_user}}/.ssh/{{github_key_file}}
        dest={{git_repo_path}}
   when: repo_exists.stat.exists == false
