--- a/ansible/roles/ops-developer/tasks/main.yml
+++ b/ansible/roles/ops-developer/tasks/main.yml
@@ -32,12 +32,6 @@
     dest=/home/{{ops_unix_user}}/.ssh/{{github_key_file}}
     owner={{ops_unix_user}} group={{ops_unix_user}} mode=0600
 
-####################################################################
-# The remaining tasks should be done as the UNIX user under which  #
-# OPS development will take place; thus, ensure "sudo: yes" exists #
-# and the sudo_user is set to {{ops_unix_user}}.                   #
-####################################################################
-
 - name: ensure GitHub key is always present in the auth agent
   sudo: yes
   sudo_user: "{{ops_unix_user}}"
@@ -57,15 +51,18 @@
 
 - name: check if repo already exists on instance
   sudo: yes
-  sudo_user: "{{ops_unix_user}}"
   stat: path={{git_repo_path}}
   register: repo_exists
 
 - name: clone OPS repo from GitHub (only if target path is nonexistent)
   sudo: yes
-  sudo_user: "{{ops_unix_user}}"
   git: repo={{git_remote_url}}
        accept_hostkey=yes
        key_file=/home/{{ops_unix_user}}/.ssh/{{github_key_file}}
        dest={{git_repo_path}}
   when: repo_exists.stat.exists == false
+
+- name: ensure OPS repo is owned by *{{ops_unix_user}}*
+  sudo: yes
+  file: path={{git_repo_path}} owner={{ops_unix_user}}
+        group={{ops_unix_user}} recurse=yes
