--- a/build.xml
+++ b/build.xml
@@ -1,3 +1,10 @@
+<!---------------------------------------------------------------------------->
+<!--                       The OpenPplSoft Runtime Project                   ->
+<!--                                                                         ->
+<!--              This file is distributed under the MIT License.            ->
+<!--                         See LICENSE.md for details.                     ->
+<!---------------------------------------------------------------------------->
+
 <project name="ENT Server" default="build" basedir=".">
 
   <description>Build file for the ENT app server / db broker.</description>
