--- a/build.xml
+++ b/build.xml
@@ -1,9 +1,9 @@
-<!---------------------------------------------------------------------------->
-<!--                       The OpenPplSoft Runtime Project                   ->
-<!--                                                                         ->
-<!--              This file is distributed under the MIT License.            ->
-<!--                         See LICENSE.md for details.                     ->
-<!---------------------------------------------------------------------------->
+<!--========================================================================-->
+<!--                       The OpenPplSoft Runtime Project                  -->
+<!--                                                                        -->
+<!--              This file is distributed under the MIT License.           -->
+<!--                         See LICENSE.md for details.                    -->
+<!--========================================================================-->
 
 <project name="ENT Server" default="build" basedir=".">
 
