Main.java and AppClassDeclExecContext now pass checkstyles audit.

--- a/build.xml
+++ b/build.xml
@@ -25,7 +25,8 @@
                 failureProperty="checkstyle.failure"
                 failOnViolation="true">
       <fileset dir="src">
-        <include name="com/enterrupt/runtime/**.java"/>
+        <include name="com/enterrupt/Main.java"/>
+        <!-- <include name="com/enterrupt/runtime/AppClassDeclExecContext.java"/>-->
       </fileset>
     </checkstyle>
   </target>
