OPSInterpretException now passes checkstyle audit.

--- a/build.xml
+++ b/build.xml
@@ -33,6 +33,7 @@
         <include name="org/openpplsoft/runtime/Scope.java"/>
         <include name="org/openpplsoft/antlr4/OPSDiagErrorListener.java"/>
         <include name="org/openpplsoft/antlr4/OPSErrorStrategy.java"/>
+        <include name="org/openpplsoft/antlr4/OPSInterpretException.java"/>
       </fileset>
     </checkstyle>
   </target>
