OPSReturnException now passes checkstyle audit.

--- a/build.xml
+++ b/build.xml
@@ -34,6 +34,7 @@
         <include name="org/openpplsoft/antlr4/OPSDiagErrorListener.java"/>
         <include name="org/openpplsoft/antlr4/OPSErrorStrategy.java"/>
         <include name="org/openpplsoft/antlr4/OPSInterpretException.java"/>
+        <include name="org/openpplsoft/antlr4/OPSReturnException.java"/>
       </fileset>
     </checkstyle>
   </target>
