--- a/build.xml
+++ b/build.xml
@@ -35,6 +35,7 @@
         <include name="org/openpplsoft/antlr4/OPSErrorStrategy.java"/>
         <include name="org/openpplsoft/antlr4/OPSInterpretException.java"/>
         <include name="org/openpplsoft/antlr4/OPSReturnException.java"/>
+        <include name="org/openpplsoft/antlr4/NoErrorTolerancePeopleCodeLexer.java"/>
       </fileset>
     </checkstyle>
   </target>
