--- a/build.xml
+++ b/build.xml
@@ -36,6 +36,7 @@
         <include name="org/openpplsoft/antlr4/OPSInterpretException.java"/>
         <include name="org/openpplsoft/antlr4/OPSReturnException.java"/>
         <include name="org/openpplsoft/antlr4/NoErrorTolerancePeopleCodeLexer.java"/>
+        <include name="org/openpplsoft/antlr4/ProgLoadListener.java"/>
       </fileset>
     </checkstyle>
   </target>
