Check entire antlr4 package, ignore package-info.java files.

--- a/build.xml
+++ b/build.xml
@@ -31,12 +31,8 @@
         <include name="org/openpplsoft/runtime/TraceFileVerifier.java"/>
         <include name="org/openpplsoft/runtime/DefnCache.java"/>
         <include name="org/openpplsoft/runtime/Scope.java"/>
-        <include name="org/openpplsoft/antlr4/OPSDiagErrorListener.java"/>
-        <include name="org/openpplsoft/antlr4/OPSErrorStrategy.java"/>
-        <include name="org/openpplsoft/antlr4/OPSInterpretException.java"/>
-        <include name="org/openpplsoft/antlr4/OPSReturnException.java"/>
-        <include name="org/openpplsoft/antlr4/NoErrorTolerancePeopleCodeLexer.java"/>
-        <include name="org/openpplsoft/antlr4/ProgLoadListener.java"/>
+        <include name="org/openpplsoft/antlr4/*.java"/>
+        <exclude name="**/package-info.java"/>
       </fileset>
     </checkstyle>
   </target>
