IStreamableBuffer.java now passes checkstyle audit.

--- a/build.xml
+++ b/build.xml
@@ -33,6 +33,7 @@
         <include name="org/openpplsoft/runtime/Scope.java"/>
         <include name="org/openpplsoft/antlr4/*.java"/>
         <include name="org/openpplsoft/buffers/ComponentBuffer.java"/>
+        <include name="org/openpplsoft/buffers/IStreamableBuffer.java"/>
         <exclude name="**/package-info.java"/>
       </fileset>
     </checkstyle>
