--- a/build.xml
+++ b/build.xml
@@ -34,6 +34,7 @@
         <include name="org/openpplsoft/antlr4/*.java"/>
         <include name="org/openpplsoft/buffers/ComponentBuffer.java"/>
         <include name="org/openpplsoft/buffers/IStreamableBuffer.java"/>
+        <include name="org/openpplsoft/buffers/RecordBuffer.java"/>
         <exclude name="**/package-info.java"/>
       </fileset>
     </checkstyle>
