--- a/build.xml
+++ b/build.xml
@@ -35,6 +35,7 @@
         <include name="org/openpplsoft/buffers/ComponentBuffer.java"/>
         <include name="org/openpplsoft/buffers/IStreamableBuffer.java"/>
         <include name="org/openpplsoft/buffers/RecordBuffer.java"/>
+        <include name="org/openpplsoft/buffers/RecordFieldBuffer.java"/>
         <exclude name="**/package-info.java"/>
       </fileset>
     </checkstyle>
