--- a/ansible/roles/ops-developer/vars/main.yml
+++ b/ansible/roles/ops-developer/vars/main.yml
@@ -3,5 +3,5 @@ git_name: Matt Quinn
 git_email: matt@mattjquinn.com
 github_key_file: github_ops_rsa
 git_repo_path: /home/{{ops_unix_user}}/ops
-git_remote_url: ssh://git@github.com/mquinn/OpenPplSoft.git
+git_remote_url: ssh://git@github.com/OpenPplSoft/OPS.git
 
