--- a/ivy.xml
+++ b/ivy.xml
@@ -3,12 +3,15 @@
 
   <configurations>
     <conf name="antlr" visibility="public"/>
+    <conf name="checkstyle" visibility="public"/>
   </configurations>
 
   <dependencies>
     <dependency org="org.antlr" name="antlr4" rev="4.1"
       conf="antlr->default"/>
-<!--    <dependency org="com.puppycrawl.tools" name="checkstyle" rev="5.7"/>
+    <dependency org="com.puppycrawl.tools" name="checkstyle" rev="5.7"
+      conf="checkstyle->default"/>
+<!--
     <dependency org="org.apache.logging.log4j" name="log4j-api" rev="2.0-rc1"/>
     <dependency org="org.apache.logging.log4j" name="log4j-core" rev="2.0-rc1"/>
     <dependency org="org.apache.commons" name="commons-lang3" rev="3.3.2"/>-->
